# nekonoverse

./: .env.cloudflared.example  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.cloudflared.yml.example  docker-compose.dev.yml.example  docker-compose.e2e.yml  docker-compose.federation.yml  docker-compose.fedibird-federation.yml  docker-compose.mastodon-client-test.yml  docker-compose.mastodon-federation.yml  docker-compose.misskey-federation.yml  docker-compose.mitra-federation.yml  docker-compose.pleroma-federation.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.example  mkdocs.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_role_column.py  003_add_passkey_credentials.py  004_add_drive_files.py  005_add_note_attachments.py  006_add_custom_emojis.py  007_add_note_mentions_and_quote.py  008_admin_moderation.py  009_notifications_interactions.py  010_advanced_federation.py  011_expand_custom_emojis.py  012_add_profile_fields.py  013_misskey_profile_visibility.py  014_invitation_codes.py  015_add_hashtags.py  016_add_note_edits.py  017_add_totp_2fa.py  018_add_focal_point.py  018_enhance_invitation_codes.py  019_enhance_invitation_codes.py  020_add_approval_registration.py  021_add_performance_indexes.py  022_add_oauth_token_expiry.py  023_add_note_url.py  023_add_push_subscriptions.py  024_add_user_is_system.py  025_add_roles_table.py  026_add_performance_indexes.py  026_add_preview_cards.py  027_add_performance_indexes.py  028_widen_emoji_shortcode.py  029_widen_reaction_emoji.py  (+18 more)
backend/app/: __init__.py  cli.py  config.py  database.py  dependencies.py  main.py  pubsub_hub.py  storage.py  valkey_client.py
backend/scripts/: check_schema.py  vision_retag.py
backend/tests/: conftest.py  test_account_deletion_api.py  test_account_deletion_lifecycle.py  test_account_deletion_service.py  test_account_migration.py  test_actor_service_extended.py  test_admin_federation.py  test_admin_moderation.py  test_announcements.py  test_api_accounts.py  test_api_activitypub.py  test_api_admin.py  test_api_admin_coverage.py  test_api_auth.py  test_api_bookmarks.py  test_api_discord_webhooks.py  test_api_email_verification.py  test_api_follow_requests.py  test_api_invites.py  test_api_lists.py  test_api_media.py  test_api_oauth.py  test_api_passkey.py  test_api_polls.py  test_api_statuses.py  test_api_timelines.py  test_approval_registration.py  test_authorized_apps.py  test_block_service_extended.py  test_blocks_mutes_bookmarks.py  test_bookmark_service.py  test_cli.py  test_config.py  test_custom_emoji.py  test_data_export.py  test_delivery_purge_worker.py  test_delivery_worker.py  test_dependencies.py  test_discord_webhook_service.py  test_domain_block_service.py  (+101 more)
(+396 files in other folders)
