[project]
name = "nekonoverse"
version = "20260329-1"
description = "ActivityPub server with Misskey-compatible emoji reactions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.0.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "valkey>=6.0.0",
    "bleach>=6.2.0",
    "python-multipart>=0.0.18",
    "Pillow>=10.0.0",
    "email-validator>=2.0.0",
    "webauthn>=2.0.0",
    "pyotp>=2.9.0",
    "pywebpush>=2.0.0",
    "markdown>=3.7",
    "aiosmtplib>=3.0.0",
    "cbor2>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-xdist>=3.5.0",
    "pytest-shard>=0.1.2",
    "pytest-timeout>=2.3.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
timeout = 30
