[project]
name = "nekonoverse"
version = "20260423-2"
description = "ActivityPub server with Misskey-compatible emoji reactions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.0.0",
    "cryptography>=46.0.6",
    "httpx[socks]>=0.28.0",
    "valkey>=6.0.0",
    "bleach>=6.2.0",
    "python-multipart>=0.0.26",
    "Pillow>=12.2.0",
    "email-validator>=2.0.0",
    "webauthn>=2.0.0",
    "pyotp>=2.9.0",
    "pywebpush>=2.0.0",
    "markdown>=3.7",
    "aiosmtplib>=3.0.0",
    "cbor2>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-shard>=0.1.2",
    "pytest-timeout>=2.3.0",
    "psycopg2-binary>=2.9.0",
    "httpx[socks]>=0.28.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# main.py はSVG定数がモジュールレベルimportの前に定義されているため E402 を除外
"app/main.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
timeout = 30
